--- a/Purchasing.Web/Views/Order/_AccountSearchDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSearchDialog.cshtml
@@ -5,6 +5,8 @@
                 <p>
                     Enter an account name or ID and then hit enter (or click the <img src="@Url.Image("details.png")" /> icon).
                     Matching accounts from the campus financial system will be displayed. Finally, click 'Select' next to your desired account.
+                    <br/>
+                    <strong>NOTE!</strong> Selecting an account from this list instead of the list available in the order will route this order to the account manager associated with the selected account and may bypass the approver.
                 </p>    
             </div>
             <div>
