--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -86,7 +86,7 @@
         .even:hover, .odd:hover {box-shadow: 0 1px 5px #BBBBBB; border: 1px solid #fff; background-color: transparent;} 
 
         .ui-buttonset .ui-button#print-btn {margin-right: -.5em; border-right: 1px solid #033366;}
-        button#more-print {min-height: 27px;} 
+        button#more-print {height: 27px; width: 26px; vertical-align: bottom;} 
         #print-menu {z-index: 20; position: absolute;}
         #print-menu ul {background: #033366; padding-bottom: 8px; border-bottom-right-radius: 8px; border-bottom-left-radius: 8px; margin-left: 5px;}
         #print-menu li a {display: block; font-size: .6em; font-weight: bold; background: #033366; color: #fff !important; padding: 10px 6px 6px; width: 55px; text-align: center;}
