show approver email preferences if user is a Conditional Approver

--- a/Purchasing.Web/Views/User/EmailPreferences.cshtml
+++ b/Purchasing.Web/Views/User/EmailPreferences.cshtml
@@ -53,7 +53,7 @@
             @Html.Partial("_RequesterPreferences")     
         }
 
-        if (roles.Contains(Role.Codes.Approver))
+        if (roles.Contains(Role.Codes.Approver) || ViewBag.IsConditionalApprover)
         {
             @Html.Partial("_ApproverPreferences")
         }
