added a view for the email preferences for when an attachment is added or a comment is added

--- a/Purchasing.Web/Views/User/EmailPreferences.cshtml
+++ b/Purchasing.Web/Views/User/EmailPreferences.cshtml
@@ -67,7 +67,7 @@
         {
             @Html.Partial("_PurchaserPreferences")
         }
-
+        @Html.Partial("_GeneralEmailPreferences")
         <section>
     
         <div class="section-contents">
