verbiage. Note not attachment

--- a/Purchasing.Web/Views/User/_GeneralEmailPreferences.cshtml
+++ b/Purchasing.Web/Views/User/_GeneralEmailPreferences.cshtml
@@ -17,7 +17,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.AddNote)
                 </div>
-                <div class="editor-field showTip" title="Someone adds a comment to an order you have acted on.">
+                <div class="editor-field showTip" title="Someone adds a note to an order you have acted on.">
                     @Html.EditorFor(model => model.AddNote)
                     @Html.ValidationMessageFor(model => model.AddNote)
                 </div>
