--- a/Purchasing.Web/Views/User/_GeneralEmailPreferences.cshtml
+++ b/Purchasing.Web/Views/User/_GeneralEmailPreferences.cshtml
@@ -8,7 +8,7 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.AddAttachment)
                 </div>
-                <div class="editor-field showTip" title="Someone adds an attachment to an order you have acted on.">
+                <div class="editor-field showTip" title="Someone adds an attachment to an order you have acted on. Note, if the attachment is added through the edit page, you will just get the edit notification, not the specific message that an attachment was added.">
                     @Html.EditorFor(model => model.AddAttachment)
                     @Html.ValidationMessageFor(model => model.AddAttachment)
                 </div>
