Changed database. Added a column to the Column Pref table, added column to the OrderHistory table. All to show the Shipping cost on the history pages. (Note. Not the freight)

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -105,6 +105,18 @@
         }
     }
 
+    if (Model.ColumnPreferences.ShowShippingCost)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Shipping Cost</th>");
+        }
+        else
+        {
+            result.Append("<td>" + @Html.Encode(item.ShippingAmount) + "</td>");
+        }
+    }
+
     if(Model.ColumnPreferences.ShowAllowBackorder)
     {
         if(tableHeader)
