--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -44,41 +44,54 @@
 }
 
 <section class="display-form">
-	<header class="ui-widget-header ui-corner-top">Org Details</header>
+    <header class="ui-widget-header ui-corner-top">All Existing Related Departmental Administrators</header>
 
-<div class="section-contents">
+    <div class="section-contents">
+    @foreach (var email in Model.AllExistingUsers)
+    {
+        var emailString = string.Format("mailto:{0}", email);
+        <a href="@emailString">@Html.Encode(email)</a>@Html.Encode(";")
+    }
+    </div>
+</section>
+
+<section class="display-form">
+    <header class="ui-widget-header ui-corner-top">Org Details</header>
+
+    <div class="section-contents">
         
-    <dl>
-        @foreach (var org in Model.Organizations)
-        {
-            var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
-            <dt>
-                <h2>@nameAndId</h2>
-            </dt>
-                    
-            foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+        <dl>
+            @foreach (var org in Model.Organizations)
             {
-                <dd>
+                var nameAndId = string.Format("{0} ({1})", org.Name, org.Id);
+                <dt>
+                    <h2>@nameAndId</h2>
+                </dt>
+                    
+                foreach (var email in Model.OrgsExistingUsers.Where(a => a.Key == org.Id))
+                {
+                    <dd>
   
-                    <div class="display-details">
+                        <div class="display-details">
                                      
-                        @{
-                            var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
-                            var emailString = string.Format("mailto:{0}", email.Value);
-                        }
-                        <a class="button" href="@url" target="_blank">Lookup</a>
-                        <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
-                    </div>
-                </dd>
+                            @{
+                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                                var emailString = string.Format("mailto:{0}", email.Value);
+                            }
+                            <a class="button" href="@url" target="_blank">Lookup</a>
+                            <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
+                        </div>
+                    </dd>
+                }
             }
-        }
-    </dl>
+        </dl>
 
 
-</div>
-        <footer class="ui-corner-bottom"></footer>
+    </div>
+    <footer class="ui-corner-bottom"></footer>
 
 </section>
+
     
 <section class="display-form">
     <header class="ui-widget-header ui-corner-top">Child Organizations With Existing Users</header>
@@ -100,8 +113,8 @@
                         <div class="display-details">
                                      
                             @{
-                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
-                                var emailString = string.Format("mailto:{0}", email.Value);
+                    var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                    var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
                             <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
@@ -137,8 +150,8 @@
                         <div class="display-details">
                                      
                             @{
-                                var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
-                                var emailString = string.Format("mailto:{0}", email.Value);
+                    var url = string.Format("http://www.ucdavis.edu/search/directory_results.shtml?filter={0}", email.Value);
+                    var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
                             <a href="@emailString">@Html.Encode(email.Value)</a>                                                       
