Changed some stuff for Dept Admin requests and training. I updated the databases already to reflect these changes.

--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
@@ -32,6 +32,7 @@
             <th>Orgs</th>
             <th>Requests</th>
             <th>Completed</th>
+            <th>Attended Training</th>
             <th></th>
         </tr>
     </thead>
@@ -87,6 +88,10 @@
                 
                 <td>
                     @item.Complete
+                </td>
+                
+                <td>
+                    @item.AttendedTraining
                 </td>
 
                 <td>
