--- a/Purchasing.Web/Views/DepartmentalAdminRequest/_daRequest.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/_daRequest.cshtml
@@ -42,6 +42,14 @@
                 <div class="display-details">
                     @Html.DisplayFor(model => model.DepartmentalAdminRequest.RequestCount)						
                 </div>
+            </li>                               
+            <li>
+                <div class="display-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.AttendedTraining)
+                </div>
+                <div class="display-details">
+                    @Html.DisplayFor(model => model.DepartmentalAdminRequest.AttendedTraining)						
+                </div>
             </li>            
         </ul>
     </section>
