Added the workgroup name to the page

--- a/Purchasing.Web/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewBag.Title = "Who Has Access To Workgroup";
+    ViewBag.Title = "Who Has Access To Workgroup " + Model.Workgroup.Name;
 
 }
 
