--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -49,7 +49,7 @@
     {
         if(tableHeader)
         {
-            result.Append("<th>PO #</th>");
+            result.Append("<th>Ref&nbsp;#</th>");
         }
         else
         {
