--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -11,7 +11,7 @@
         
         <div class="section-text">
             <p>
-                Select the proper accounting/routing information. Select an <strong>account</strong> if it is known, otherwise select the <strong>approver and account manager</strong> the order request should be routed to.
+                Select <strong>ONE</strong> of the choices below for the proper accounting/routing information. Select an <strong>account</strong> if it is known, otherwise select the <strong>approver and account manager</strong> the order request should be routed to.
             </p>
             <p>
                 If this purchasing request needs to be <strong>split across multiple accounts</strong> you also have the option to <strong>'Split Order Request'</strong> (below) and <strong>'Split By Line'</strong> (above).
