--- a/Purchasing.Web/Views/Order/_OrderPreferences.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderPreferences.cshtml
@@ -68,9 +68,8 @@
                             {
                                 <li>
                                     @Html.ActionLink(@file.FileName, "ViewFile", new { fileId = file.Id })
-                                    <div class="ui-widget"><select id="combobox" class="qq-upload-file-category jcs-combobox" value="@file.Category"><option value="">Select one...</option><option value="Order Confirmation">Order Confirmation</option><option value="Invoice">Invoice</option><option value="Shipping Notification">Shipping Notification</option><option value="Packing Slip">Packing Slip</option><option value="Licenses and Agreements">Licenses and Agreements</option><option value="Miscellaneous">Miscellaneous</option></select></div>                                    
                                     <input type="hidden" class="qq-upload-file-id" name="fileIds" value="@file.Id" />
-                                    <span class="qq-upload-file-category-message"></span>
+                                    <div class="ui-widget" style="display: inline-block"><select id="combobox" data-id="@file.Id" class="qq-upload-file-category jcs-combobox" value="@file.Category"><option value="@file.Category">@file.Category</option><option value="Order Confirmation">Order Confirmation</option><option value="Invoice">Invoice</option><option value="Shipping Notification">Shipping Notification</option><option value="Packing Slip">Packing Slip</option><option value="Licenses and Agreements">Licenses and Agreements</option><option value="Miscellaneous">Miscellaneous</option></select><div class="qq-upload-file-category-message" style="display: inline-block; margin-left: 33px;"></div> </div>                                                                                                        
                                 </li>                                
                             }
                         </ul>
