updated ajax controller references

--- a/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
@@ -18,7 +18,7 @@
 
 	<script type="text/javascript">
 
-        var url = '@Url.Action("SearchBuilding")';
+        var url = '@Url.Action("SearchBuilding", "Ajax")';
 
 	    $(function () {
 
