--- a/Purchasing.Web/Views/Order/_Options.cshtml
+++ b/Purchasing.Web/Views/Order/_Options.cshtml
@@ -11,8 +11,8 @@ purchasing.options({
     SearchVendorUrl: '@Url.Action("SearchVendor", "WorkgroupVendor")',
     CheckDuplicateVendorUrl: '@Url.Action("CheckDuplicateVendor", "Workgroup")',
     SearchVendorAddressUrl: '@Url.Action("SearchVendorAddress", "WorkgroupVendor")',
-    SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes")',
-    SearchBuildingUrl : '@Url.Action("SearchBuilding")',
+    SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes", "Ajax")',
+    SearchBuildingUrl : '@Url.Action("SearchBuilding", "Ajax")',
     GetLineItemsAndSplitsUrl: '@Url.Action("GetLineItemsAndSplits", new { id = Model.Order.Id })',
     GetSubAccounts: '@Url.Action("GetSubAccounts", new { id = Model.Order.Id })',
     GetRequesters: '@Url.Action("GetRequesters", "Workgroup", new { id = Model.Workgroup.Id })',
