--- a/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
@@ -9,10 +9,41 @@
     ViewBag.IsAccountSync = Model.Workgroup.SyncAccounts;
 }
 
+@section AdditionalScripts
+{
+
+	<script type="text/javascript">
+
+	    var url = '@Url.Action("SearchBuilding", "Workgroup")';
+
+	    $(function () {
+
+	        $("#WorkgroupAddress_Building").autocomplete({
+	            source: url,
+	            minLength: 2,
+	            select: function (event, ui) {
+
+	                $("#WorkgroupAddress_BuildingCode").val(ui.item.id);
+
+	            },
+	            change: function (event, ui) {
+
+	                if (ui.item == null) {
+	                    $("#WorkgroupAddress_BuildingCode").val("");
+	                }
+	            }
+	        });
+
+	    });
+
+	</script>
+
+}
 
 
 
-	 @Html.Partial("_StatusBar", Model.Workgroup.Id) 
+
+@Html.Partial("_StatusBar", Model.Workgroup.Id) 
      
      @{
          var helpText = "To add a shipping enter the fields below.</br></br>When an order is placed, only the name will be displayed to the requester.";
@@ -55,6 +86,7 @@ Example: Dinosaur 1  *@
                 </div>
                 <div class="editor-field">
                     @Html.EditorFor(model => model.WorkgroupAddress.Building)
+                    @Html.Hidden("WorkgroupAddress.BuildingCode", Model.WorkgroupAddress.BuildingCode != null ? Model.WorkgroupAddress.BuildingCode.Id : string.Empty)
                     @Html.ValidationMessageFor(model => model.WorkgroupAddress.Building)
                 </div>
             </li>
