Added DC, Direct Charge to KFS document type choices

--- a/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
@@ -45,6 +45,7 @@
                                     <option value="DPO">DPO (Departmental Purchase Order)</option>
                                     <option value="DRO">DRO (Departmental Repair Order)</option>
                                     <option value="CO">CO (Change Order)</option>
+                                    <option value="DC">DC (Direct Charge)</option>
                                 </select>
                                 <input type="submit" id="complete-order" name="action" class="button" value="Complete" disabled="disabled"/>
                             </div>
