SearchBuilding was moved to the Ajax controller

--- a/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
@@ -14,7 +14,7 @@
 
 	<script type="text/javascript">
 
-	    var url = '@Url.Action("SearchBuilding", "Workgroup")';
+	    var url = '@Url.Action("SearchBuilding", "Ajax")';
 
 	    $(function () {
 
