Added a balloon tip to the received notes advising not to put information like serial numbers in that field.

--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -321,7 +321,7 @@
                                 <tr>
                                     <td class="label">Notes:</td>
                                     <td>
-                                        <textarea class="receiveNotes" data-id="@item.Id" >@item.ReceivedNotes</textarea>
+                                        <textarea class="receiveNotes showTip" data-id="@item.Id" title="<strong>Tip:</strong> Don't put things like serial numbers in here because this can be edited. <br/>Information like that should be added to the comments/notes of the review page." >@item.ReceivedNotes</textarea>
                                     </td>
                                     <td>
                                         <span class="notes-loader" style="display: none;">
