--- a/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AddAddress.cshtml
@@ -27,7 +27,7 @@
 	                minLength: 2,
 	                select: function (event, ui) {
 
-	                    $("#WorkgroupAddress_BuildingCode").val(""); //if we pass the id (really the building code, the model binder fails)
+	                    $("#WorkgroupAddress_BuildingCode").val(ui.item.id); 
 	                    
 	                },
 	                change: function(event, ui) {
