daysNotActed on now calculated directly
instead of looking through the orderTracking, we directly check if the
order is complete and use LastActedDate to compute DaysNotActedOn

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -312,13 +312,13 @@
         {
             bool overdue = false;
             string daysNotActedOnDisplay;
-            if(Model.OrderTracking.Where(x => x.Order.Id == item.OrderId).Any(a => a.StatusCode.IsComplete))
+            if (item.IsComplete)
             {
                 daysNotActedOnDisplay = "--";
             }
             else
             {
-                var lastDate = Model.OrderTracking.Where(x => x.Order.Id == item.OrderId).Max(a => a.DateCreated).Date;
+                var lastDate = item.LastActionDate;
                 var timeSpan = DateTime.Now.Date - lastDate;
                 var daysNotActedOn = timeSpan.Days;
                 if(daysNotActedOn > 7)
