--- a/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="address-dialog" title="Add Shipping Address">
+﻿@model OrderModifyModel
+<div id="address-dialog" title="Add Shipping Address">
     <form id="address-form">
     <section class="section-contents">
         <div class="section-text">
@@ -57,8 +58,7 @@
                 <div class="editor-label required">
                     State: <span class="required">*</span></div>
                 <div class="editor-field">
-                    <input id="address-state" name="address-state" type="text" placeholder="State" class="required"
-                        maxlength="2" />
+                    @this.Select("address-state").Options(Model.States, a => a.Id, a => a.Name).FirstOption("--Select State--").Selected("CA")
                     <span data-valmsg-for="address-state" data-valmsg-replace="true"></span>
                 </div>
             </li>
