Removed db access to states table for order dialog. Specify option values for States.

--- a/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
@@ -1,5 +1,4 @@
-﻿@model OrderModifyModel
-<div id="address-dialog" title="Add Shipping Address">
+﻿<div id="address-dialog" title="Add Shipping Address">
     <form id="address-form">
     <section class="section-contents">
         <div class="section-text">
@@ -58,7 +57,61 @@
                 <div class="editor-label required">
                     State: <span class="required">*</span></div>
                 <div class="editor-field">
-                    @this.Select("address-state").Options(Model.States, a => a.Id, a => a.Name).FirstOption("--Select State--").Selected("CA")
+                    <select id="address-state" name="address-state">
+                        <option value="AK">ALASKA </option>
+                        <option value="AL">ALABAMA</option>
+                        <option value="AR">ARKANSAS</option>
+                        <option value="AZ">ARIZONA</option>
+                        <option value="CA" selected="selected">CALIFORNIA</option>
+                        <option value="CO">COLORADO</option>
+                        <option value="CT">CONNECTICUT</option>
+                        <option value="DC">DISTRICT OF COLUMBIA</option>
+                        <option value="DE">DELAWARE</option>
+                        <option value="FL">FLORIDA</option>
+                        <option value="GA">GEORGIA</option>
+                        <option value="HI">HAWAII </option>
+                        <option value="IA">IOWA</option>
+                        <option value="ID">IDAHO</option>
+                        <option value="IL">ILLINOIS</option>
+                        <option value="IN">INDIANA</option>
+                        <option value="KS">KANSAS </option>
+                        <option value="KY">KENTUCKY</option>
+                        <option value="LA">LOUISIANA</option>
+                        <option value="MA">MASSACHUSETTS</option>
+                        <option value="MD">MARYLAND</option>
+                        <option value="ME">MAINE</option>
+                        <option value="MI">MICHIGAN</option>
+                        <option value="MN">MINNESOTA</option>
+                        <option value="MO">MISSOURI</option>
+                        <option value="MS">MISSISSIPPI</option>
+                        <option value="MT">MONTANA</option>
+                        <option value="NC">NORTH CAROLINA</option>
+                        <option value="ND">NORTH DAKOTA</option>
+                        <option value="NE">NEBRASKA</option>
+                        <option value="NH">NEW HAMPSHIRE</option>
+                        <option value="NJ">NEW JERSEY</option>
+                        <option value="NM">NEW MEXICO</option>
+                        <option value="NV">NEVADA </option>
+                        <option value="NY">NEW YORK</option>
+                        <option value="OH">OHIO</option>
+                        <option value="OK">OKLAHOMA</option>
+                        <option value="OR">OREGON </option>
+                        <option value="PA">PENNSYLVANIA</option>
+                        <option value="PR">PUERTO RICO</option>
+                        <option value="RI">RHODE ISLAND</option>
+                        <option value="SC">SOUTH CAROLINA</option>
+                        <option value="SD">SOUTH DAKOTA</option>
+                        <option value="TN">TENNESSEE</option>
+                        <option value="TX">TEXAS</option>
+                        <option value="UT">UTAH</option>
+                        <option value="VA">VIRGINIA</option>
+                        <option value="VI">U.S. VIRGIN ISLANDS</option>
+                        <option value="VT">VERMONT</option>
+                        <option value="WA">WASHINGTON</option>
+                        <option value="WI">WISCONSIN</option>
+                        <option value="WV">WEST VIRGINIA</option>
+                        <option value="WY">WYOMING</option>
+                    </select>
                     <span data-valmsg-for="address-state" data-valmsg-replace="true"></span>
                 </div>
             </li>
