--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -348,9 +348,11 @@ body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2p
     bottom: 0;
     margin-left: -1px;
     padding: 0;
+    right: -20px;
     /* adjust styles for IE 6/7 */
     *height: 1.7em;
     *top: 0.1em;
+    
 }
 .ui-combobox-input {
     margin: 0;
