added backup pages

--- a/Purchasing.Web/Views/System/Index.cshtml
+++ b/Purchasing.Web/Views/System/Index.cshtml
@@ -6,4 +6,5 @@
 
 <ul>
     <li>@Html.ActionLink("View Index Information", "Indexes")</li>
+    <li>@Html.ActionLink("Backup Logs", "Backups")</li>
 </ul>
